# Global-Optimization

./: README.md
cpp/: CMakeLists.txt  Delaunay.cpp
cpp/Delaunay-Triangulation/: CMakeLists.txt
python/: Delaunay.py
python/Delaunay-Triangulation/: MI.py  go_mutual.py
